--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,9 +6,9 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 if(MSVC)
-    add_compile_options(/wd4819)
-    add_compile_options(/source-charset:utf-8)
-    add_compile_options("$<$<OR:$<CONFIG:Debug>,$<CONFIG:RelWithDebInfo>>:-DDEBUG>")
+    target_compile_options(${PROJECT_NAME} PUBLIC /wd4819)
+    target_compile_options(${PROJECT_NAME} PUBLIC /source-charset:utf-8)
+    target_compile_options(${PROJECT_NAME} PUBLIC "$<$<OR:$<CONFIG:Debug>,$<CONFIG:RelWithDebInfo>>:-DDEBUG>")
 endif()
 
 add_subdirectory(src)
