--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -12,24 +12,32 @@ set(CMAKE_AUTORCC ON)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
+
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/../cmake")
 
+
+if(ANDROID)
+    add_library(${PROJECT_NAME} SHARED main.cpp qml.qrc)
+else()
+    add_executable(${PROJECT_NAME} main.cpp qml.qrc)
+endif()
 
 find_package(Qt5 COMPONENTS Core Quick REQUIRED)
 list(GET Qt5Core_INCLUDE_DIRS 0 Qt5_INCLUDE_DIR)
 message(STATUS "Found Qt5: ${Qt5_INCLUDE_DIR} (found version \"${Qt5_VERSION}\")")
 
+target_compile_definitions(${PROJECT_NAME} PRIVATE $<$<OR:$<CONFIG:Debug>,$<CONFIG:RelWithDebInfo>>:QT_QML_DEBUG>)
+target_link_libraries(${PROJECT_NAME} PRIVATE Qt5::Core Qt5::Quick)
 
-if(ANDROID)
-    add_library(ProConDisconnector SHARED main.cpp qml.qrc)
-else()
-    add_executable(ProConDisconnector main.cpp qml.qrc)
-endif()
 
-target_compile_definitions(ProConDisconnector
-  PRIVATE $<$<OR:$<CONFIG:Debug>,$<CONFIG:RelWithDebInfo>>:QT_QML_DEBUG>)
-target_link_libraries(ProConDisconnector
-  PRIVATE Qt5::Core Qt5::Quick)
+find_package(LIBUSB-1.0 REQUIRED)
+
+target_include_directories(${PROJECT_NAME} PRIVATE ${LIBUSB-1.0_INCLUDE_DIRS})
+target_link_directories(${PROJECT_NAME} PRIVATE ${LIBUSB-1.0_LIBRARY_DIRS})
+target_link_libraries(${PROJECT_NAME} PRIVATE ${LIBUSB-1.0_LIBRARIES})
+
+
+add_custom_command(TARGET ${PROJECT_NAME} COMMAND ${CMAKE_COMMAND} -E copy_if_different ${LIBUSB-1.0_LIBRARIES} $<TARGET_FILE_DIR:${PROJECT_NAME}>)
 
 # QtCreator supports the following variables for Android, which are identical to qmake Android variables.
 # Check http://doc.qt.io/qt-5/deployment-android.html for more information.
