ペアリング情報リセット機能追加

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,8 +2,8 @@ cmake_minimum_required(VERSION 3.5)
 project(ProConDisconnector VERSION 0.1.0)
 project(ProConDisconnector LANGUAGES CXX)
 
-set(CMAKE_CXX_STANDARD 17)
-set(CMAKE_CXX_STANDARD_REQUIRED ON)
+
+add_subdirectory(src)
 
 if(MSVC)
     target_compile_options(${PROJECT_NAME} PUBLIC /wd4819)
@@ -11,4 +11,5 @@ if(MSVC)
     target_compile_options(${PROJECT_NAME} PUBLIC "$<$<OR:$<CONFIG:Debug>,$<CONFIG:RelWithDebInfo>>:-DDEBUG>")
 endif()
 
-add_subdirectory(src)
+set_target_properties(${PROJECT_NAME} PROPERTIES CXX_STANDARD 17 CXX_EXTENSIONS OFF)
+target_compile_options(${PROJECT_NAME} PUBLIC "-std=c++17")
